--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    'bleak >= 0.10.0',
+    'bleak >=0.10.0, <0.15.0',
 ]
 
 [project.urls]
